k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: policy-engine
  labels:
    name: policy-engine
    app: kcloud-policy-engine
